--- a/src/main/webapp/css/board/review.css
+++ b/src/main/webapp/css/board/review.css
@@ -12,6 +12,10 @@
     word-break: keep-all;
 }
 
+.gallery-list .gallery .img-box {
+    height: 200px;
+}
+
 .paging {
     position: relative;
 }
@@ -35,19 +39,19 @@
 
 
 @media screen and (max-width: 375px) {
-.paging .write-btn {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 95px;
-    height: 40px;
-    background: #9b8b7e;
-    text-align: center;
-    line-height: 38px;
-    color: #fff;
-    cursor: pointer;
-    letter-spacing: -1px;
-    font-size: 14px;
-}
+    .paging .write-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 95px;
+        height: 40px;
+        background: #9b8b7e;
+        text-align: center;
+        line-height: 38px;
+        color: #fff;
+        cursor: pointer;
+        letter-spacing: -1px;
+        font-size: 14px;
+    }
 
 }
