미소원치과 카테고리 서브페이지 좀더 액티브하게 애니메이션 추가

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1653,6 +1653,10 @@ body .section07 .bx-pager-link span + span {
     margin-top: -70px;
 }
 
+.popup .slick-track {
+    width: 100% !important;
+}
+
 .fp-menu ul.quick {
     position: absolute;
     top: 50%;
