--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -495,7 +495,7 @@ body {
 .review-text {
     padding-top: 39px;
     text-align: center;
-    height: 161px;
+    height: 186px;
     border: 1px solid #d7d7d7;
     box-sizing: border-box;
     background: #fff;
@@ -507,6 +507,21 @@ body {
     margin-bottom: 14px;
     font-weight: 500;
     letter-spacing: -1.5px;
+}
+
+.review-text pre {
+    height: 57px;
+    overflow: hidden;
+}
+
+.review-text h7 {
+    color: #222;
+    display: block;
+    font-size: 15px;
+}
+
+.review-text pre img {
+    display: none;
 }
 
 .review-text p {
