--- a/src/main/webapp/css/board/review.css
+++ b/src/main/webapp/css/board/review.css
@@ -1,5 +1,8 @@
+.gallery-list .gallery li h5 {
+    display: none;
+}
 .gallery-list .gallery li div.contents {
-    height: 40px;
+    height: 46px;
     line-height: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -10,7 +13,17 @@
     font-size: 14px;
     padding: 0 20px;
     word-break: keep-all;
+    margin-top: 22px;
+    margin-bottom: 20px;
 }
+
+h7 {
+    color: #939393;
+    display: block;
+    font-size: 15px;
+    margin-bottom: 23px;
+}
+
 
 .gallery-list .gallery .img-box {
     height: 244px;
@@ -37,8 +50,55 @@
     display: none;
 }
 
+.gallery-list .gallery li div.contents p {
+    font-size: 16px;
+    color: #222;
+    letter-spacing: -1px;
+    padding: 0 20px;
+    word-break: keep-all;
+    line-height: 1.5;
+    display: inline-block;
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    height: 3.1em;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+
+
+}
+
+@media screen and (max-width: 414px) {
+    .gallery-list .gallery li div.contents p {
+        width: 100%;
+        font-size: 13px;
+        line-height: 1.4;
+        height: 2.7em;
+        font-size: 14px;
+        padding: 0;
+    }
+    .gallery-list .gallery li div.contents {
+        height: 38px;
+    }
+    .gallery-list .gallery .img-box {
+        height: 132px;
+    }
+    .gallery-list .gallery .img-box .img {
+        padding-bottom: 100%;
+    }
+}
 
 @media screen and (max-width: 375px) {
+    .gallery-list .gallery .img-box {
+        height: 118px;
+    }
     .paging .write-btn {
         position: absolute;
         right: 0;
