관리자에서 미디어 및 치료사례에 카테고리 추가하기

--- a/src/main/webapp/css/admin/write.css
+++ b/src/main/webapp/css/admin/write.css
@@ -48,3 +48,8 @@ form>div .input.inputtop {height:41px;line-height: 30px;text-align: left;padding
 
 .boardCategory {text-align:left;}
 .boardCategory select{height:27px;padding:0 10px;}
+
+.typeDiv select {
+    float: left;
+    height: 27px;
+}
