게시판부분 css 수정완료

--- a/src/main/webapp/css/board/listBoard.css
+++ b/src/main/webapp/css/board/listBoard.css
@@ -37,6 +37,7 @@
 
 .board-list table td, .board-list table th {
     vertical-align: middle;
+    letter-spacing: -1px;
 }
 
 @media screen and (max-width: 1300px) {
