--- a/src/main/webapp/css/board/case.css
+++ b/src/main/webapp/css/board/case.css
@@ -67,9 +67,10 @@
     padding: 0 2px;
     box-sizing: border-box;
     float: left;
-    height: 63px;
-    line-height: 63px;
+    height: 55px;
+    line-height: 56px;
     text-align: center;
+    letter-spacing: -1px;
 }
 
 .tab li a {
