--- a/src/main/webapp/css/board/galleryBoard.css
+++ b/src/main/webapp/css/board/galleryBoard.css
@@ -47,10 +47,11 @@
     display: -webkit-box;
     -webkit-line-cpamp: 1;
     -webkit-box-orient: vertical;
-    margin-top: 35px;
-    margin-bottom: 22px;
+    margin-top: 32px;
+    margin-bottom: 8px;
     color: #222;
-    font-size: 17px;
+    font-size: 19px;
+    font-weight: 500;
 }
 
 .gallery-list .gallery li p {
@@ -288,7 +289,7 @@
     .gallery-list .gallery .img-box {
     overflow: hidden;
     position: relative;
-    height: 125px;
+    height: 120px;
 }
 
     .gallery-list .gallery {
@@ -298,6 +299,7 @@
     margin-left: -5px;
     margin-right: -5px;
     letter-spacing: -1px;
+    font-size: 15px;
 }
 
 
