--- a/src/main/webapp/css/board/review.css
+++ b/src/main/webapp/css/board/review.css
@@ -14,14 +14,14 @@
     padding: 0 20px;
     word-break: keep-all;
     margin-top: 22px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 h7 {
     color: #939393;
     display: block;
     font-size: 15px;
-    margin-bottom: 46px;
+    margin-bottom: 42px;
 }
 
 
@@ -56,14 +56,14 @@ h7 {
     letter-spacing: -1px;
     padding: 0 20px;
     word-break: keep-all;
-    line-height: 1.5;
+    line-height: 1.3;
     display: inline-block;
     width: 200px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: normal;
-    height: 3.1em;
+    height: 2.5em;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -75,27 +75,177 @@ h7 {
 
 }
 
-@media screen and (max-width: 414px) {
-    .gallery-list .gallery li div.contents p {
+
+@media screen and (max-width:640px) {
+  .gallery-list .gallery .img-box .img {
+        padding-bottom: 78%;
+    }
+    
+h7 {
+    color: #939393;
+    display: block;
+    font-size: 14px;
+    margin-bottom: 28px;
+    margin-top: -15px;
+}
+
+     .gallery-list .gallery li div.contents p {
         width: 100%;
         font-size: 13px;
         line-height: 1.4;
-        height: 2.7em;
-        font-size: 14px;
+        height: 1.7em;
+        font-size: 15px;
         padding: 0;
+        margin-top: -2px;
     }
-    .gallery-list .gallery li div.contents {
-        height: 38px;
+     .gallery-list .gallery li div.contents {
+        height: 15px;
+        margin-top: 18px;
+        margin-bottom: 22px;
     }
     .gallery-list .gallery .img-box {
-        height: 132px;
+        height: 204px;
     }
-    .gallery-list .gallery .img-box .img {
-        padding-bottom: 100%;
+    .paging .write-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 95px;
+        height: 40px;
+        background: #9b8b7e;
+        text-align: center;
+        line-height: 38px;
+        color: #fff;
+        cursor: pointer;
+        letter-spacing: -1px;
+        font-size: 14px;
     }
+
+}
+
+
+@media screen and (max-width:500px) {
+  .gallery-list .gallery .img-box .img {
+        padding-bottom: 78%;
+    }
+    
+h7 {
+    color: #939393;
+    display: block;
+    font-size: 14px;
+    margin-bottom: 28px;
+    margin-top: -15px;
+}
+
+     .gallery-list .gallery li div.contents p {
+        width: 100%;
+        font-size: 13px;
+        line-height: 1.4;
+        height: 1.7em;
+        font-size: 15px;
+        padding: 0;
+        margin-top: -2px;
+    }
+     .gallery-list .gallery li div.contents {
+        height: 15px;
+        margin-top: 18px;
+        margin-bottom: 22px;
+    }
+    .gallery-list .gallery .img-box {
+        height: 169px;
+    }
+    .paging .write-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 95px;
+        height: 40px;
+        background: #9b8b7e;
+        text-align: center;
+        line-height: 38px;
+        color: #fff;
+        cursor: pointer;
+        letter-spacing: -1px;
+        font-size: 14px;
+    }
+
+}
+
+
+@media screen and (max-width: 414px) {
+  .gallery-list .gallery .img-box .img {
+        padding-bottom: 78%;
+    }
+    
+h7 {
+    color: #939393;
+    display: block;
+    font-size: 14px;
+    margin-bottom: 28px;
+    margin-top: -15px;
+}
+
+     .gallery-list .gallery li div.contents p {
+        width: 100%;
+        font-size: 13px;
+        line-height: 1.4;
+        height: 1.7em;
+        font-size: 15px;
+        padding: 0;
+        margin-top: -2px;
+    }
+     .gallery-list .gallery li div.contents {
+        height: 15px;
+        margin-top: 18px;
+        margin-bottom: 22px;
+    }
+    .gallery-list .gallery .img-box {
+        height: 139px;
+    }
+    .paging .write-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 95px;
+        height: 40px;
+        background: #9b8b7e;
+        text-align: center;
+        line-height: 38px;
+        color: #fff;
+        cursor: pointer;
+        letter-spacing: -1px;
+        font-size: 14px;
+    }
+
 }
 
 @media screen and (max-width: 375px) {
+        .gallery-list .gallery .img-box .img {
+        padding-bottom: 78%;
+    }
+    
+h7 {
+    color: #939393;
+    display: block;
+    font-size: 14px;
+    margin-bottom: 28px;
+    margin-top: -15px;
+}
+
+     .gallery-list .gallery li div.contents p {
+        width: 100%;
+        font-size: 13px;
+        line-height: 1.4;
+        height: 1.7em;
+        font-size: 15px;
+        padding: 0;
+        margin-top: -2px;
+    }
+     .gallery-list .gallery li div.contents {
+        height: 15px;
+        margin-top: 18px;
+        margin-bottom: 22px;
+    }
     .gallery-list .gallery .img-box {
         height: 118px;
     }
@@ -115,3 +265,51 @@ h7 {
     }
 
 }
+
+
+
+
+@media screen and (max-width: 330px) {
+.gallery-list .gallery .img-box .img {
+        padding-bottom: 78%;
+    }
+    
+h7 {
+    color: #939393;
+    display: block;
+    font-size: 13px;
+    margin-bottom: 28px;
+    margin-top: -15px;
+}
+
+     .gallery-list .gallery li div.contents p {
+        width: 100%;
+        font-size: 13px;
+        line-height: 1.4;
+        height: 1.7em;
+        font-size: 15px;
+        padding: 0;
+        margin-top: -2px;
+    }
+     .gallery-list .gallery li div.contents {
+        height: 15px;
+        margin-top: 18px;
+        margin-bottom: 20px;
+    }
+    .gallery-list .gallery .img-box {
+        height: 104px;
+    }
+    .paging .write-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 95px;
+        height: 40px;
+        background: #9b8b7e;
+        text-align: center;
+        line-height: 38px;
+        color: #fff;
+        cursor: pointer;
+        letter-spacing: -1px;
+        font-size: 14px;
+    }
