--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -23,7 +23,7 @@
     margin-top: 42px;
     background: #f5f5f5;
     padding-top: 25px;
-    padding-bottom: 203px;
+    padding-bottom: 225px;
 }
 
 .section01 .section-text {
@@ -109,7 +109,7 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 210px;
+    height: 199px;
     left: 0px;
     bottom: -66px;
 }
@@ -837,6 +837,11 @@ section.board-link {
 }
 
 @media screen and (max-width: 414px) {
+    section.section-top-title-left .bg {
+    padding-bottom: 0;
+    height: 328px;
+}
+
     section.section-quotes-title-right .bg {
         bottom: -38px;
         height: 220px;
@@ -933,6 +938,10 @@ section.section-top-title-right-two .max-layout-width ul {
 }
 
 @media screen and (max-width: 375px) {
+    section.section-top-title-left .bg {
+    padding-bottom: 0;
+    height: 345px;
+}
     .section10 {
         margin-top: 58px;
     }
