--- a/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
@@ -30,7 +30,7 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 24px;
-    padding-bottom: 194px;
+    padding-bottom: 146px;
 }
 
 .section01 .section-text {
@@ -822,7 +822,7 @@ section.board-link {
         padding-bottom: 35px;
     }
     section.section-top-title-left {
-        padding-bottom: 35px;
+        padding-bottom: 68px;
     }
 
     section.board-link {
@@ -941,6 +941,7 @@ section.board-link {
 }
 
 @media screen and (max-width: 470px) {
+
     .section05 {
         padding-bottom: 50px;
         height: auto;
@@ -1046,7 +1047,13 @@ section.board-link {
     .section03 .border {
         height:203px
     }
+
+     section.section-top-title-left {
+        padding-bottom: 68px;
+    }
 }
+
+
 
 @media screen and (max-width: 380px)  {
     .img-right .max-layout-width .text {
@@ -1090,11 +1097,16 @@ section.board-link {
         padding-bottom: 128px;
         margin-top: 49px;
     }
+      section.section-top-title-left {
+        padding-bottom: 57px;
+    }
 }
 
 
-
 @media screen and (max-width: 360px)  {
+     section.section-top-title-left {
+        padding-bottom: 30px;
+    }
     .section05 {
         height: 228px;
         padding-bottom: 100px;
@@ -1122,4 +1134,10 @@ section.board-link {
     section.section-top-title-left .bg {
         height: 220px;
     }
+}
+
+@media screen and (max-width: 320px)  {
+section.section-top-title-left {
+    padding-bottom: 78px;
+}
 }
