--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -577,13 +577,13 @@
 
 .text-slider .slider-arrow .slider-prev {
     padding-left: 20px;
-    background: #9b8b7e url(../../images/sub/implant/cmmn/left_slider.png) no-repeat center;
+    background: #333 url(../../images/sub/implant/cmmn/left_slider.png) no-repeat center;
     position: relative;
 }
 
 .text-slider .slider-arrow .slider-next {
     padding-right: 20px;
-    background: #9b8b7e url(../../images/sub/implant/cmmn/right_slider.png) no-repeat center;
+    background: #333 url(../../images/sub/implant/cmmn/right_slider.png) no-repeat center;
 }
 
 @media screen and (max-width: 1300px) {
