푸터 css 수정완료

--- a/src/main/webapp/css/clientFooter.css
+++ b/src/main/webapp/css/clientFooter.css
@@ -137,7 +137,7 @@
     display: block;
     padding: 0 23px;
     font-size: 13px;
-    color: #fff;
+    color: #8a8a8a;
 }
 
 .footer-link li:before {
